Slim-Monads is now Pure-Monads project.

--- a/tests/PureMonads.Tests/PureMonads.Tests.csproj
+++ b/tests/PureMonads.Tests/PureMonads.Tests.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\SlimMonads\SlimMonads.csproj" />
+    <ProjectReference Include="..\..\src\PureMonads\PureMonads.csproj" />
   </ItemGroup>
 	
 </Project>
