--- a/src/PureMonads/PureMonads.csproj
+++ b/src/PureMonads/PureMonads.csproj
@@ -5,8 +5,8 @@
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>1.0.0</Version>
-    <PackageId>PureMonads</PackageId>
+    <Version>1.0.2</Version>
+    <PackageId>Pure-Monads</PackageId>
     <PackageTags>Monads</PackageTags>
     <Authors>Andrei Gankin</Authors>
     <RepositoryUrl>https://github.com/agankin/Pure-Monads</RepositoryUrl>
