--- a/src/PureMonads/PureMonads.csproj
+++ b/src/PureMonads/PureMonads.csproj
@@ -24,4 +24,13 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>PureMonads.Tests</_Parameter1>
+    </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>PureMonads.Samples</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
